--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
@@ -11,9 +17,7 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
+
 
 @media (prefers-color-scheme: dark) {
   html {
