--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,29 @@
 
 
 .container {
-  padding: 0 2rem;
+  padding: 0;
+  
+  video{
+    padding: 0;
+    width:100%;
+    height: 776px;
+    object-fit: cover;
+    margin: 0;
+    position: relative;
+     transition: auto 0s ease 0s; top: 0%; left: 0%;
+
+     @media  (max-width:1200px) {
+    height: 836px;
+     }
+  }
+
+  .videoText{
+    position: absolute;
+    z-index: 5;
+    color: white;
+  }
 }
+
 
 .main {
   min-height: 100vh;
