--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -1,5 +1,11 @@
 .navbar {
     display: flex;
+    position: sticky;
+    left: 0;
+    top: 0;
+    background-color: white;
+    z-index: 6;
+    width: 100%;
     height: 69px;
     padding: 5px;
 
@@ -15,6 +21,7 @@
     img {
         max-height: 27px;
         cursor: pointer;
+        justify-content: c;
     }
 
     .subMenu {
@@ -41,4 +48,20 @@
     width: 100%;
     background-color: red;
     overflow: hidden;
+}
+
+.progress{
+    height: 61px;
+    background-color: #f2f2f2;
+    position: sticky;
+    top: 69px;
+    left: 0;
+    z-index: 6;
+    @media (max-width: 1200px) {
+        height: 8px;
+        text-overflow: hidden;
+        p{
+            opacity: 0;
+        }
+    }
 }
