--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -26,12 +26,14 @@
 
     .subMenu {
         display: flex;
+        padding-top: 11px;
         cursor: pointer;
         justify-content: center;
         align-items: center;
+        justify-content: center;
         margin-left: 35px;
         div {
-            padding: 0px 24px;
+            padding: 0px 23px;
             font-size: 15px;
         }
 
@@ -44,6 +46,8 @@
 .insights{
     display: block;
     position: absolute;
+    left: 0;
+    top: 69px;
     height: 430px;
     width: 100%;
     background-color: red;
@@ -58,7 +62,7 @@
     position: sticky;
     top: 69px;
     left: 0;
-    z-index: 6;
+    z-index: 1;
     @media (max-width: 1200px) {
         height: 8px;
         text-overflow: hidden;
