--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,8 +15,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  
+}
+a:hover{
+  text-decoration: underline;
 }
 
+.click{
+  color:red;
+}
 
 
 @media (prefers-color-scheme: dark) {
@@ -27,4 +34,24 @@ a {
     color: white;
     background: black;
   }
+}
+
+.alert1-enter {
+  opacity: 0;
+  transform: scale(0.9);
+  transform: translateY(-600px);
+}
+.alert1-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 2000ms, transform 400ms;
+}
+.alert1-exit {
+  opacity: 1;
+}
+.alert1-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transform: translateY(-1100px);
+  transition: opacity 300ms, transform 250ms;
 }
