--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
+
 .container {
     padding: 0;
 
@@ -53,3 +55,163 @@
     }
 }
 
+.list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 20px;
+    margin: 40px 60px;
+
+    @media (max-width: 1200px) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+    @media (max-width: 770px) {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        margin: 60px 34px 40px 5px;
+        text-align: justify;
+    }
+
+    div {
+        margin-top: -20px;
+        min-height: 202px;
+    }
+
+    li {
+        font-size: 22px;
+        @media (max-width: 770px) {
+            list-style-type: none;
+        }
+    }
+
+    p {
+        font-size: 16px;
+        color: #615f5f;
+        padding-top: 20px;
+        padding-bottom: 10px;
+    }
+
+    a {
+        color: blue;
+        font-weight: 600;
+    }
+
+    hr {
+        padding-top: 5px;
+        border: none;
+        @media (max-width: 770px) {
+            border-bottom: 2px solid rgb(160, 158, 158);
+            margin-left: -20px;
+            margin-right: -15px;
+        }
+    }
+}
+
+.choose {
+    display: flex;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(34, 30, 30, 1) 18%, rgba(0, 0, 0, 1) 100%);
+
+    .box {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        margin: 0px 210px;
+        @media (max-width: 1200px) {
+            margin: 0px 100px;
+        }
+        @media (max-width: 770px) {
+            margin: 0px 18px;
+        }
+        .bigtext {
+            display: flex;
+            align-items: center;
+            height: 220px;
+            color: white;
+            font-size: 50px;
+            font-family: "Gilroy-Bold", sans-serif;
+
+            @media (max-width: 1200px) {
+                height: 180px;
+            }
+            @media (max-width: 770px) {
+                height: 100px;
+                font-size: 34px;
+            }
+        }
+
+        ul {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-column-gap: 40px;
+            grid-row-gap: 20px;
+            @media (max-width: 1200px) {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+            }
+            @media (max-width: 770px) {
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: repeat(6, 1fr);
+                text-align: justify;
+            }
+
+            color: white;
+            .choosebox {
+                min-height: 193px;
+                margin: 0px;
+                @media (max-width: 1200px) {
+                    min-height: 160px;
+                }
+                @media (max-width: 770px) {
+                    min-height: 133px;
+                    margin-left: -50px;
+                }
+                div {
+                    display: flex;
+                    flex-direction: row;
+                    margin-left: -50px;
+                    @media (max-width: 770px) {
+                        flex-direction: column;
+                        margin-left: 0px;
+                    }
+                    li {
+                        font-family: "Gilroy-Medium", sans-serif;
+                        list-style: none;
+                        color: #fff;
+                        font-size: 22px;
+                        font-weight: 500;
+                        margin: 0 0 15px;
+                        line-height: 1.6;
+                        margin-left: 15px;
+                    }
+
+                    .num {
+                        font-family: "Gilroy-Medium", sans-serif;
+                        margin-top: 7px;
+                        font-size: 18px;
+                        padding-left: 18px;
+                        color: #656565;
+                        @media (max-width: 770px) {
+                            margin-bottom: 0px;
+                        }
+                    }
+                }
+
+                .text {
+                    font-family: "Gilroy-Medium", sans-serif;
+                    color: #919191;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 24px;
+                    padding-left: 18px;
+                    @media (max-width: 770px) {
+                        margin-top: -5px;
+                    }
+                }
+            }
+        }
+    }
+}
