--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -1,18 +1,25 @@
+@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+
 .navbar {
     display: flex;
+    justify-content: space-between;
     position: sticky;
     left: 0;
     top: 0;
-    background-color: white;
     z-index: 7;
     width: 100%;
     height: 69px;
     padding: 5px;
+    box-shadow: 0 3px 6px rgb(0 0 0 / 9%);
+    background: #fff;
 
     .imgCont {
         display: flex;
         margin: 10px;
         justify-content: center;
+        div{
+            margin-top:5px;
+        }
         @media (max-width: 1200px) {
             flex: 1;
         }
@@ -25,7 +32,7 @@
     }
 
     .subMenu {
-        display: flex;
+        display: flex; 
         padding-top: 11px;
         justify-content: center;
         align-items: center;
@@ -35,7 +42,8 @@
         cursor: pointer;
         .navMenu {
             padding: 0px 23px;
-            font-size: 15px;
+            font-size: 18px;
+            font-weight: 550;
             .active{
                 font-weight: 600;
             }
