--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -70,7 +70,7 @@
     @media (max-width: 770px) {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
-        margin: 60px 34px 40px 5px;
+        margin: 60px 34px 0px 5px;
         text-align: justify;
     }
 
@@ -113,7 +113,7 @@
     display: flex;
     background: rgb(0, 0, 0);
     background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(34, 30, 30, 1) 18%, rgba(0, 0, 0, 1) 100%);
-
+    
     .box {
         display: flex;
         flex-direction: column;
@@ -130,8 +130,10 @@
             align-items: center;
             height: 220px;
             color: white;
-            font-size: 50px;
+            font-size: 45px;
             font-family: "Gilroy-Bold", sans-serif;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 600;
 
             @media (max-width: 1200px) {
                 height: 180px;
