--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
-
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
+@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -17,8 +17,8 @@
         display: flex;
         margin: 10px;
         justify-content: center;
-        div{
-            margin-top:5px;
+        div {
+            margin-top: 5px;
         }
         @media (max-width: 1200px) {
             flex: 1;
@@ -32,7 +32,7 @@
     }
 
     .subMenu {
-        display: flex; 
+        display: flex;
         padding-top: 11px;
         justify-content: center;
         align-items: center;
@@ -41,10 +41,25 @@
         margin-left: 35px;
         cursor: pointer;
         .navMenu {
+            --b: 0.1em; /* the thickness of the line */
+            --c: #103fc1; /* the color */
+
+            color: #0000;
+            padding-block: var(--b);
+            background: linear-gradient(var(--c) 50%, #000 0) 0% calc(100% - var(--_p, 0%)) / 100% 200%,
+                linear-gradient(var(--c) 0 0) 0% var(--_p, 0%) / var(--_p, 0%) var(--b) no-repeat;
+            -webkit-background-clip: text, padding-box;
+            background-clip: text, padding-box;
+            transition: 0.3s var(--_s, 0s) linear, background-size 0.3s calc(0.3s - var(--_s, 0s));
+
             padding: 0px 23px;
             font-size: 18px;
             font-weight: 550;
-            .active{
+            &:hover {
+                --_p: 100%;
+                --_s: 0.3s;
+            }
+            .active {
                 font-weight: 600;
             }
         }
@@ -112,7 +127,7 @@
         padding: 46px 20px 100px 20px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, 1fr);
-        grid-column-gap:90px;
+        grid-column-gap: 90px;
         grid-row-gap: 0px;
         font-family: "Graphik Regular", "Arial", Sans-Serif;
         color: #004dff;
