create fade effects for second page and add component

--- a/styles/Design.module.scss
+++ b/styles/Design.module.scss
@@ -410,11 +410,15 @@
         -webkit-background-clip: text;
         color: white;
         font-size: 60px;
-        font-family: "Gilroy-Medium", sans-serif;
+        font-family: "Poppins", sans-serif;
         background-color: red;
         z-index: 2;
         background-color: blue;
         flex: 2;
+
+        span {
+            color: lightskyblue;
+        }
         @media (max-width: 1400px) {
             font-size: 43px;
         }
@@ -430,7 +434,8 @@
     p {
         font-size: 18px;
         color: white;
-        font-family: "Gilroy-Regular", sans-serif;
+        font-family: "Poppins", sans-serif;
+        font-weight: 300;
 
         @media (max-width: 768px) {
             margin-bottom: 40px;
@@ -441,10 +446,125 @@
     }
 }
 
-.service{
-    margin: 40px 0;
+.service {
+    margin: 60px 0px 40px 0px;
+    @media (max-width: 768px) {
+        margin: 40px 0px 20px 0px;
+    }
+    .h2 {
+        font-size: 55px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        padding-bottom: 60px;
+        @media (max-width: 1400px) {
+            font-size: 45px;
+        }
+        @media (max-width: 976px) {
+            font-size: 40px;
+        }
+        @media (max-width: 768px) {
+            font-size: 35px;
+            padding-bottom: 20px;
+        }
+    }
+
+    .serblock {
+        display: flex;
+        @media (max-width: 768px) {
+            flex-direction: column;
+        }
+        .serblocknum {
+            margin-top: 5px;
+            padding-right: 10px;
+            font-size: 18px;
+            color: blue;
+            font-weight: 500;
+            @media (max-width: 1400px) {
+                font-size: 16px;
+                margin-top: 3px;
+            }
+        }
+        .sertext {
+            padding-bottom: 30px;
+            @media (max-width: 768px) {
+                padding-bottom: 20px;
+            }
+            h3 {
+                @media (max-width: 1400px) {
+                    font-size: 20px;
+                }
+            }
+            p {
+                padding-top: 15px;
+                @media (max-width: 1400px) {
+                    padding-top: 5px;
+                }
+            }
+        }
+    }
 }
 
+.process {
+   
+    background: radial-gradient(rgb(20, 19, 19) 0%, rgb(36, 33, 40) 84%);
+   padding: 60px 0px;
+   @media (max-width:768px){
+    padding: 40px 0px;
+}
+
+   .imageDev{
+    margin-left: 30px;
+    margin-top: 260px;
+    @media (max-width:991px){
+        display: none;
+    }
+   }
+    .h2 {
+        font-size: 55px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        color: #fff;
+        padding-bottom: 60px;
+        @media (max-width: 1400px) {
+            font-size: 45px;
+        }
+        @media (max-width: 976px) {
+            font-size: 40px;
+        }
+        @media (max-width: 768px) {
+            font-size: 35px;
+            padding-bottom: 20px;
+        }
+    }
+
+    .processNum {
+        margin-top: 5px;
+        padding-right: 10px;
+        font-size: 18px;
+        color: #656565;
+        font-weight: 500;
+        @media (max-width: 1400px) {
+            font-size: 16px;
+            margin-top: 3px;
+        }
+    }
+
+    .processText {
+        h3 {
+            color: #fff;
+            @media (max-width: 1400px) {
+                font-size: 20px;
+            }
+        }
+        p {
+            color: #919191;
+            padding-top: 15px;
+            @media (max-width: 1400px) {
+                padding-top: 5px;
+            }
+        }
+    }
+}
 
 @keyframes animStar {
     from {
