--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,6 +24,7 @@
         z-index: 5;
         color: white;
         top: 215px;
+        text-align: center;
         h1 {
             max-width: 1903px;
             letter-spacing: 2.5px;
@@ -40,16 +41,24 @@
             @media (max-width: 768px) {
                 font-size: 40px;
             }
+            @media (max-width: 368px) {
+                font-size: 32px;
+            }
         }
         p {
+            
             padding-top: 22px;
-            padding-right: 30px;
+            padding-right: 20px;
             letter-spacing: 1px;
             font-size: 24px;
             font-weight: lighter;
             text-shadow: 1px 1px 3px #4a4a4a;
             @media (max-width: 768px) {
                 font-size: 20.8px;
+                padding-right: 10px;
+            }
+            @media (max-width: 368px) {
+                font-size: 18px;
             }
         }
     }
@@ -61,7 +70,7 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 20px;
-    margin: 40px 60px;
+    margin: 60px 60px 40px 60px;
 
     @media (max-width: 1200px) {
         grid-template-columns: repeat(2, 1fr);
@@ -70,7 +79,7 @@
     @media (max-width: 770px) {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
-        margin: 60px 34px 0px 5px;
+        margin: 60px 34px 0px 0px;
         text-align: justify;
     }
 
@@ -113,7 +122,7 @@
     display: flex;
     background: rgb(0, 0, 0);
     background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(34, 30, 30, 1) 18%, rgba(0, 0, 0, 1) 100%);
-    
+
     .box {
         display: flex;
         flex-direction: column;
@@ -123,6 +132,9 @@
             margin: 0px 100px;
         }
         @media (max-width: 770px) {
+            margin: 0px 28px;
+        }
+        @media (max-width: 400px) {
             margin: 0px 18px;
         }
         .bigtext {
@@ -132,7 +144,7 @@
             color: white;
             font-size: 45px;
             font-family: "Gilroy-Bold", sans-serif;
-            font-family: 'Open Sans', sans-serif;
+            font-family: "Open Sans", sans-serif;
             font-weight: 600;
 
             @media (max-width: 1200px) {
@@ -182,6 +194,7 @@
                     li {
                         font-family: "Gilroy-Medium", sans-serif;
                         list-style: none;
+                        text-align:start;
                         color: #fff;
                         font-size: 22px;
                         font-weight: 500;
