--- a/styles/Design.module.scss
+++ b/styles/Design.module.scss
@@ -490,6 +490,7 @@
                 padding-bottom: 20px;
             }
             h3 {
+                font-size: 24px;
                 @media (max-width: 1400px) {
                     font-size: 20px;
                 }
