--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.cdnfonts.com/css/gilroy-bold");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
@@ -19,7 +20,7 @@ a {
     text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .click {
@@ -124,7 +125,7 @@ a:hover {
     background: -webkit-linear-gradient(-45deg, rgba(127, 39, 156, 1) 0%, rgba(46, 39, 157, 1) 100%);
     background: -o-linear-gradient(-45deg, rgba(127, 39, 156, 1) 0%, rgba(46, 39, 157, 1) 100%);
     background: -ms-linear-gradient(-45deg, rgba(127, 39, 156, 1) 0%, rgba(46, 39, 157, 1) 100%);
-    background: linear-gradient(135deg, rgb(31, 30, 32) 0%, rgb(12, 11, 17) 100%);
+    background: linear-gradient(135deg, rgb(10, 10, 10) 0%, rgb(12, 11, 17) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7f279c', endColorstr='#2e279d', GradientType=1 );
     h3 {
         color: #fff;
@@ -276,7 +277,20 @@ a {
 
 
 
+.text-decor{
+    text-decoration: none;
 
+    &:hover{
+        text-decoration: none;
+    }
+    &:link{
+        text-decoration: underline;
+        list-style: none !important;
+    }
+    &:any-link{
+        text-decoration: none !important;
+    }
+}
 
 
   
