--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/gilroy-bold");
-@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300;400;500;600;700&display=swap");
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -13,7 +13,6 @@
     padding: 5px;
     box-shadow: 0 3px 6px rgb(0 0 0 / 9%);
     background: #fff;
-
 
     .imgCont {
         display: flex;
@@ -43,6 +42,7 @@
         margin-left: 35px;
         cursor: pointer;
         .navMenu {
+            position: relative;
             --b: 0.1em; /* the thickness of the line */
             --c: #103fc1; /* the color */
             list-style: none;
@@ -56,171 +56,47 @@
             padding: 0px 23px;
             font-size: 18px;
             font-weight: 550;
+
+            .navMenuAbs {
+                display: flex;
+                flex-direction: column;
+                position: absolute;
+                background-color: #fff;
+                padding: 8px 28px;
+                border-radius: 3px;
+                font-size: 18px !important;
+                transition: opacity 0.3s;
+                white-space: nowrap;
+                font-size: 18px;
+                left: -6px;
+                opacity: 0;
+            }
+            .navMenu:hover .navMenuAbs{
+                opacity: 1;
+            }
+
             &:hover {
                 --_p: 100%;
-                --_s: 0.3s;
-            text-decoration: none;
+                --_s: 0.25s;
             }
-            &:active{
-                text-decoration: none;
+            &:hover .navMenuAbs{
+              
+                opacity: 1;
             }
-            &:link{
-                text-decoration: none;
-            }
+
             .active {
                 font-weight: 600;
             }
         }
 
+       
+
+        
+
         @media (max-width: 1200px) {
             display: none;
         }
     }
-}
-
-.insights {
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    left: 0;
-    top: 69px;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    overflow: hidden;
-    z-index: 1;
-    position: fixed;
-    cursor: default;
-    border-top: 1px solid rgba(189, 184, 184, 0.425);
-
-    .secondaryNav {
-        display: flex;
-        flex: 1;
-        padding: 0 190px;
-    }
-    .leftBlock {
-        height: 100%;
-        padding: 57px 70px 50px 34px;
-        min-width: 325px;
-        max-width: 487px;
-        .boldP {
-            font-family: "Graphik SemiBold", "Arial", Sans-Serif;
-            font-weight: 750;
-            font-style: normal;
-            text-transform: uppercase;
-            font-size: 16px;
-            padding: 0;
-        }
-        .link {
-            color: #004dff;
-            padding-top: 10px;
-            font-size: 18px;
-            font-family: "Graphik Semibold", "Arial", sans-serif !important;
-            font-weight: 750;
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-        p {
-            font-size: 14px;
-            font-family: "Graphik Regular", "Arial", Sans-Serif;
-            line-height: 20px;
-            padding-top: 15px;
-            letter-spacing: 0.5px;
-        }
-    }
-
-    .rightBlock {
-        height: 100%;
-        display: grid;
-        padding: 46px 20px 100px 20px;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        grid-column-gap: 90px;
-        grid-row-gap: 0px;
-        font-family: "Graphik Regular", "Arial", Sans-Serif;
-        color: #004dff;
-        font-size: 16px;
-
-        .link:hover {
-            text-decoration: underline;
-        }
-    }
-}
-.services {
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    left: 0;
-    flex: 1;
-    top: 69px;
-    height: 430px;
-    width: 100%;
-    font-family: "Graphik Regular", "Arial", Sans-Serif;
-    color: #004dff;
-    letter-spacing: 0.4px;
-    font-size: 16px;
-    background-color: white;
-    overflow: hidden;
-    z-index: 1;
-    position: fixed;
-
-    .secondaryNav {
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0 200px 0 200px;
-        width: 100%;
-        flex: 1;
-
-        .servicesBlock {
-            display: grid;
-            padding: 55px 0px 60px 20px;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(6, 1fr);
-            grid-column-gap: 90px;
-
-            a {
-                display: flex;
-                flex: 1;
-                flex-wrap: wrap;
-            }
-        }
-    }
-}
-.industries {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 69px;
-    height: 430px;
-    width: 100%;
-    background-color: white;
-    overflow: hidden;
-    z-index: 1;
-    position: fixed;
-}
-.careers {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 69px;
-    height: 430px;
-    width: 100%;
-    background-color: white;
-    overflow: hidden;
-    z-index: 1;
-    position: fixed;
-}
-.aboutaccenture {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 69px;
-    height: 430px;
-    width: 100%;
-    background-color: white;
-    overflow: hidden;
-    z-index: 1;
-    position: fixed;
 }
 
 .progress {
