--- a/styles/Navigate.module.scss
+++ b/styles/Navigate.module.scss
@@ -1,5 +1,8 @@
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
+@import url("https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300;400;500;600;700&display=swap");
 .navbar {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
     position: sticky;
@@ -38,6 +41,7 @@
         background-color: white;
         justify-content: center;
         margin-left: 35px;
+
         cursor: pointer;
         .navMenu {
             position: relative;
@@ -50,36 +54,13 @@
             -webkit-background-clip: text, padding-box;
             background-clip: text, padding-box;
             transition: 0.3s var(--_s, 0s) linear, background-size 0.3s calc(0.3s - var(--_s, 0s));
-
             padding: 0px 23px;
             font-size: 18px;
             font-weight: 550;
 
-            .navMenuAbs {
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                background-color: #fff;
-                padding: 8px 28px;
-                border-radius: 3px;
-                font-size: 18px !important;
-                transition: opacity 0.3s;
-                white-space: nowrap;
-                font-size: 18px;
-                left: -6px;
-                opacity: 0;
-            }
-            .navMenu:hover .navMenuAbs{
-                opacity: 1;
-            }
-
             &:hover {
                 --_p: 100%;
                 --_s: 0.25s;
-            }
-            &:hover .navMenuAbs{
-              
-                opacity: 1;
             }
 
             .active {
@@ -87,9 +68,33 @@
             }
         }
 
-       
-
-        
+        .navMenu .navMenuAbs {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            background-color: #fff;
+            padding: 18px 38px;
+            border-radius: 3px;
+            font-size: 18px !important;
+            transition: opacity 0.3s;
+            white-space: nowrap;
+            font-size: 18px;
+            left: -12px;
+            font-family: "Poppins", sans-serif;
+            font-weight: 500;
+            opacity: 0;
+            pointer-events:none;
+            box-shadow: 6px 9px 6px rgb(0 0 0 / 9%);
+            border-radius: 9px;
+            a{
+                padding-bottom: 10px;
+            }
+        }
+        .navMenu:hover .navMenuAbs {
+            opacity: 1;
+            pointer-events:all;
+            
+        }
 
         @media (max-width: 1200px) {
             display: none;
