--- a/styles/Technologies.module.scss
+++ b/styles/Technologies.module.scss
@@ -9,12 +9,15 @@
     background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     z-index: -2;
 }
 
-.parallax::before{
-    content: '';
+.parallax::before {
+    content: "";
     background-color: rgba(0, 0, 0, 0.623);
     position: absolute;
     width: 100%;
