--- a/styles/Technologies.module.scss
+++ b/styles/Technologies.module.scss
@@ -2,11 +2,12 @@
     /* The image used */
     background-image: url(".././public/circle.jpg");
     background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
     /* Full height */
     color: white;
     position: relative;
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
