--- a/styles/Technologies.module.scss
+++ b/styles/Technologies.module.scss
@@ -8,6 +8,7 @@
     color: white;
     position: relative;
     /* Create the parallax scrolling effect */
+    background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
