--- a/styles/Technologies.module.scss
+++ b/styles/Technologies.module.scss
@@ -2,24 +2,21 @@
     /* The image used */
     background-image: url(".././public/circle.jpg");
     background-color: rgb(0, 0, 0);
-    width: 100%;
-    height: 100%;
     /* Full height */
     color: white;
     position: relative;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-size: auto;
+     background-attachment: scroll;
+    -webkit-touch-callout: none;
     z-index: -2;
 }
 
-.parallax::before {
-    content: "";
+.parallax::before{
+    content: '';
     background-color: rgba(0, 0, 0, 0.623);
     position: absolute;
     width: 100%;
