--- a/styles/Technologies.module.scss
+++ b/styles/Technologies.module.scss
@@ -9,11 +9,15 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
-     background-attachment: scroll;
-    -webkit-touch-callout: none;
+    background-size: cover;
     z-index: -2;
 }
+@supports (-webkit-touch-callout: none) {
+    .parallax{
+        background-attachment: scroll;
+    }
+  }
+
 
 .parallax::before{
     content: '';
